	* batteries_core.ml: now use [ExtStream.Stream] instead of [Batlib_baselib_Stream]
	* extArray.ml?: [print] added
	* IO.ml: [identity] created
	* pa_mainfun.ml: created
	* META: [pa_mainfun] added
	* Makefile: [install], [syntax] now handle [pa_mainfun]
	* extList.mli: [t_of_sexp], [sexp_of_t] added to [ExtList.List]

10/09/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_Baselib_Buffer.mli:
	* batlib_Baselib_Digest.mli:
	* batlib_Baselib_Lazy.mli:
	* batlib_Baselib_Queue.mli:
	* batlib_Baselib_Stack.mli:
	* batlib_Baselib_Conv.mli: [with sexp] replaced with explicit type declarations
	* batlib_Baselib_Conv.mli: comments containing [@raise] fixed
	* odoc_generator_batlib.ml: [default_style_options] tweaked
	* option.ml*:
	* global.ml*: [t_of_sexp], [sexp_of_t] added
	* extlib/*.mli: replaced [with sexp] with [t_of_sexp] and [sexp_of_t]
	* extList.ml*: [ListLabels] now defines type ['a t]
	* rope.ml: in [of_ustring], [STRING.length s] replaces [String.length (of_string s)]
	* examples: added
	* IO.mli: [BigEndian] documented
	* Makefile: [reinstall] added
	
10/08/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batteries_core.ml: [Random] is now [Extlib.ExtRandom.Random]
	* doc/batteries/myocamlbuild.ml: tags [use_batteries] and [use_boilerplate] separated
	* enum.ml*: [( // )] added
	* std.ml*: [( // )] renamed [( /// )]
	* std.ml*: [args], [exe] added
	* pa_openin.ml: [module_with_init], [module_init], [one_or_more_modules], [add_initialization] added
	* pa_openin_r.ml: created
	* pa_batteries/: created
	* file.ml*: [lines_of] added
	* IO.ml: [close_at_end], [make_enum] created
	* IO.ml: [*_of] now uses [make_enum]
	* META: [pa_batteries] added
	* Makefile: in [syntax], [pa_batteries] and [pa_openin_r] added
	* Makefile: in [install], [pa_batteries] and [pa_openin_r] added
	* extensions.html: created
	* setup.html: added sections "More Control" and "Even More Control".
	
10/07/2008 David Teller <David.Teller@univ-orleans.fr>: